Footer and minor fixes

--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
 
 <head>
   <meta charset="utf-8">
-  <title>principal-ple-prodigius</title>
+  <meta name="author" content="Pablo Nieto">
+  <meta name="description" content="Principal Front end evualation exercise for Prodigious.">
+  <meta name="keywords" content="Front End, Prodigious, Vue.js">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Prueba Principal</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
